--- a/index.html
+++ b/index.html
@@ -1293,12 +1293,41 @@ textarea {
               <li class="footer_item_menu">
                 <a class="footer_menu_link" href="#our-services">SERVICES</a>
               </li>
+              <li class="footer_item_menu">
+                <a class="footer_menu_link" href="#order">ORDER</a>
+              </li>
               </ul>
           </nav>
         </div>
       </div>
 
       <div class="b ">
+
+        <div class="footer_services">
+          <nav class="footer_nav-menu">
+          <ul class="footer_list_categories">
+            <li class="footer_item_categories">
+            <a class="footer_categories_link" href="#service-air-conditioners">Air conditioning</a>
+            </li>
+            <li class="footer_item_categories">
+            <a class="footer_categories_link" href="#service-heat-pumps">Heat pumps</a>
+          </li>
+          <li class="footer_item_categories">
+            <a class="footer_categories_link" href="#service-fire-dampers">Fire dampers</a>
+          </li>
+            <li class="footer_item_categories">
+            <a class="footer_categories_link" href="#service-ventilation-systems">Ventilation systems</a>
+          </li>
+            <li class="footer_item_categories">
+            <a class="footer_categories_link" href="#service-prevention">Prevention services</a>
+          </li>
+          </ul>
+        </nav>
+    </div>
+
+
+
+
         <div class="footer-contacts">
           <h3 class="title_contacts">Contacts</h3>
             <address>
