--- a/index.html
+++ b/index.html
@@ -757,8 +757,6 @@ textarea {
       </div>
 
 
-      <!-- Додайте цей блок відразу після закриття тега </header> -->
-
 <section id="about-us" class="about-us-section">
   <div class="container">
     <div class="about-inner">
@@ -907,8 +905,8 @@ textarea {
                   <div class="page page2">
                     <p style="padding:20px 10px;font-weight: 600;">Key advantages of our heat pump services:</p>
                     <ul>
-                      <li><p class="serv_title">ENERGI EFFICIENCY</p>Heat pumps reduce energy use and heating/cooling costs compared to traditional systems by efficiently transferring heat.</li>
-                      <li><p class="serv_title">ECO-FRENDLY</p>By minimizing CO2 emissions, heat pumps support environmental sustainability and the fight against climate change.</li>
+                      <li><p class="serv_title">ENERGY EFFICIENCY</p>Heat pumps reduce energy use and heating/cooling costs compared to traditional systems by efficiently transferring heat.</li>
+                      <li><p class="serv_title">ECO-FRIENDLY</p>By minimizing CO2 emissions, heat pumps support environmental sustainability and the fight against climate change.</li>
                       <li><p class="serv_title">DURABILITY</p>Regular maintenance extends the above-average lifespan of heat pumps, ensuring long-term performance.</li>
                       <li><p class="serv_title">SEASONAL MAINTENANCE</p>Routine checks ensure heat pumps run efficiently all year, preventing weather-related issues.</li>
                       <li><p class="serv_title">TAILORED SOLUTIONS</p>We specialize in selecting and fitting the ideal heat pump for your specific residential or commercial needs.</li>
@@ -994,13 +992,13 @@ textarea {
                     <p style="padding:20px 10px;font-weight: 600;">Pros of fire damper installation and servicing:</p>
                     <ul>
                       <li><p class="serv_title">EFFECTIVE FIRE CONTAINMENT</p>Fire dampers are critical for containing fires where they start, preventing the spread of flames and smoke through a building’s ventilation system.</li>
-                      <li><p class="serv_title">SAFETY COMLIANCE</p>Regular servicing ensures that fire dampers comply with fire safety regulations, which can help avoid legal issues and potential fines.</li>
+                      <li><p class="serv_title">SAFETY COMPLIANCE</p>Regular servicing ensures that fire dampers comply with fire safety regulations, which can help avoid legal issues and potential fines.</li>
                       <li><p class="serv_title">PROPERTY PROTECTION</p>By functioning correctly, fire dampers help protect not only the structural integrity of the building but also the assets and contents within from fire and smoke damage.</li>
                       <li><p class="serv_title">LIFESPAN EXTENSION OF HVAC SYSTEMS</p>Proper maintenance can prolong the life of HVAC systems by ensuring that dampers operate correctly without imposing additional stress on the system.</li>
                     </ul>
                     <p style="padding:20px 10px;font-weight: 600;">Cons of fire damper installation and servicing:</p>
                     <ul>
-                      <li><p class="serv_title">UPFRONT COSTS</p>FThe initial installation of fire dampers can be costly, especially if retrofitting them into an existing building.</li>
+                      <li><p class="serv_title">UPFRONT COSTS</p>The initial installation of fire dampers can be costly, especially if retrofitting them into an existing building.</li>
                       <li><p class="serv_title">MAINTENANCE EXPENSES</p>Regular servicing incurs ongoing costs, which can be significant over the lifespan of a building.</li>
                       <li><p class="serv_title">TECHNICAL EXPERTISE REQUIRED</p>: Installation and servicing of fire dampers require skilled technicians, which can limit service options and increase costs.</li>
                     </ul>
@@ -1080,7 +1078,7 @@ textarea {
                   <div class="page page2">
                     <p style="padding:20px 10px;font-weight: 600;">Pros of ventilation systems:</p>
                     <ul>
-                      <li><p class="serv_title">IMPOVED AIR QUALITY</p>They reduce levels of indoor pollutants, allergens, and humidity by constantly cycling fresh air into a space.</li>
+                      <li><p class="serv_title">IMPROVED AIR QUALITY</p>They reduce levels of indoor pollutants, allergens, and humidity by constantly cycling fresh air into a space.</li>
                       <li><p class="serv_title">ENERGY EFFICIENCY</p> Modern systems can recover heat from outgoing air, saving on heating costs in cooler climates.</li>
                       <li><p class="serv_title">MOISTURE CONTROL</p> Proper ventilation helps to control moisture levels, which can prevent mold growth and structural damage.</li>
                       <li><p class="serv_title">COMFORT</p>These systems can help to maintain a comfortable indoor temperature and humidity level.</li>
@@ -1090,7 +1088,7 @@ textarea {
                     <p style="padding:20px 10px;font-weight: 600;">Cons of ventilation systems:</p>
                     <ul>
                       <li><p class="serv_title">NOISE</p>Depending on the system and installation, ventilation can be noisy, which may be disruptive.</li>
-                      <li><p class="serv_title">ENERGI CONSUMPTION</p>Systems that are not optimized can consume a significant amount of energy, potentially leading to higher utility costs.</li>
+                      <li><p class="serv_title">ENERGY CONSUMPTION</p>Systems that are not optimized can consume a significant amount of energy, potentially leading to higher utility costs.</li>
                       <li><p class="serv_title">HEAT LOSS</p>Inadequate systems may lead to the loss of indoor heat, increasing the demand on heating systems and elevating energy expenses.</li>
                     </ul>
                   </div>
